--- a/testbeds/vmware/roles/kubernetes/tasks/apps/destroy.yml
+++ b/testbeds/vmware/roles/kubernetes/tasks/apps/destroy.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: clear apps' rules from ipvs table
-  command: kube-ipvs-proxy.py {{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['prme_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }} clear {{ item.name }} {{ item.policy }}
+  command: kube-ipvs-proxy.py {{ item.namespace }} {{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['prme_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }} clear {{ item.name }} {{ item.policy }}
   with_items: "{{ apps }}"
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
@@ -15,13 +15,13 @@
   become: true
 
 - name: delete apps' service
-  shell: kubectl delete service {{ item.name }}
+  shell: kubectl --namespace={{ item.namespace }} delete service {{ item.name }}
   with_items: "{{ apps }}"
   when: '"master" in nodes[inventory_hostname]["type"]'
   become: true
 
 - name: delete apps' deployment
-  shell: kubectl delete deployment {{ item.name }}
+  shell: kubectl --namespace={{ item.namespace }} delete deployment {{ item.name }}
   with_items: "{{ apps }}"
   when: '"master" in nodes[inventory_hostname]["type"]'
   become: true
