added apache server scripts

--- a/testbeds/vmware/vars/kubernetes.yml
+++ b/testbeds/vmware/vars/kubernetes.yml
@@ -380,3 +380,6 @@ apps:
   - name: httperf-clients
     namespace: default
     policy: rr
+  - name: apache-servers
+    namespace: default
+    policy: wrr
