--- a/testbeds/vmware/roles/proxmox/tasks/vms/create.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/vms/create.yml
@@ -17,7 +17,8 @@
     vmid: "{{ proxmox_base_vm_vmid }}"
     name: "{{ proxmox_name_prefix }}{{ proxmox_prme_id }}-{{ proxmox_vm_hostname_prefix }}{{ proxmox_vm_id }}"
     newid: "{{ proxmox_vm_id }}"
-  ignore_errors: yes
+#  ignore_errors: yes
+  failed_when: false
   delegate_to: localhost
 
 - name: set VM eth0 interface type to virtio
