--- a/apps/vmware/roles/workload/tasks/lb/create.yml
+++ b/apps/vmware/roles/workload/tasks/lb/create.yml
@@ -20,6 +20,32 @@
   when: '"minion" in nodes[inventory_hostname]["type"]'
   become: true
 
+- name: fetch dump-ipvsadm-L-n.py script
+  get_url:
+    url: https://raw.githubusercontent.com/Baseerat/ipvs-utils/master/dump-ipvsadm-L-n.py
+    dest: /usr/local/bin/dump-ipvsadm-L-n.py
+    mode: 0755
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
+- name: run dump-ipvsadm-L-n.py script
+  shell: nohup dump-ipvsadm-L-n.py {{ workload.lb.ipvsadm.timeout }} {{ workload_logs_dir }}/ipvsadm_L_n.{{ inventory_hostname }}.csv > /dev/null 2> /dev/null < /dev/null &
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
+- name: fetch dump-ipvsadm-L-n--stats.py script
+  get_url:
+    url: https://raw.githubusercontent.com/Baseerat/ipvs-utils/master/dump-ipvsadm-L-n--stats.py
+    dest: /usr/local/bin/dump-ipvsadm-L-n--stats.py
+    mode: 0755
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
+- name: run dump-ipvsadm-L-n--stats.py script
+  shell: nohup dump-ipvsadm-L-n--stats.py {{ workload.lb.ipvsadm.timeout }} {{ workload_logs_dir }}/ipvsadm_L_n__stats.{{ inventory_hostname }}.csv > /dev/null 2> /dev/null < /dev/null &
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
 - pause:
     minutes: 2
 
