--- a/apps/vmware/roles/workload/tasks/lb/destroy.yml
+++ b/apps/vmware/roles/workload/tasks/lb/destroy.yml
@@ -1,5 +1,31 @@
 ---
 
+- name: stop dump-ipvsadm-L-n.py script
+  shell: pkill -u root -f dump-ipvsadm-L-n.py
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  failed_when: false
+  become: true
+
+- name: remove dump-ipvsadm-L-n.py script
+  file:
+    path: /usr/local/bin/dump-ipvsadm-L-n.py
+    state: absent
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
+- name: stop dump-ipvsadm-L-n--stats.py script
+  shell: pkill -u root -f dump-ipvsadm-L-n--stats.py
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  failed_when: false
+  become: true
+
+- name: remove dump-ipvsadm-L-n--stats.py script
+  file:
+    path: /usr/local/bin/dump-ipvsadm-L-n--stats.py
+    state: absent
+  when: '"minion" in nodes[inventory_hostname]["type"]'
+  become: true
+
 - name: clear apache-servers' rules from ipvs table
   command: kube-ipvs-proxy.py {{ workload.lb.apache_servers.namespace }} {{ k8s_node_address_prefix }}{{ nodes[inventory_hostname]['master']['prme_id'] }}.{{ nodes[inventory_hostname]['master']['vm_id'] }}:{{ k8s_api_server_port }} clear apache-servers {{ workload.lb.apache_servers.policy }}
   when: '"minion" in nodes[inventory_hostname]["type"]'
