commits post addition of collect lb workload

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ apps/vmware/ansible.cfg
 apps/vmware/inventory.ini
 apps/vmware/vars/kubernetes.yml
 apps/vmware/vars/kubernetes.defaults.yml
+apps/vmware/keys
