--- a/apps/vmware/roles/workload/tasks/main.yml
+++ b/apps/vmware/roles/workload/tasks/main.yml
@@ -4,6 +4,10 @@
   include: roles/workload/tasks/lb/run.yml
   tags: run_lb_workload
 
+- name: collect lb workload
+  include: roles/workload/tasks/lb/collect.yml
+  tags: collect_lb_workload
+
 - name: cleanup lb workload
   include: roles/workload/tasks/lb/cleanup.yml
   tags: cleanup_lb_workload
