--- a/apps/vmware/roles/workload/tasks/main.yml
+++ b/apps/vmware/roles/workload/tasks/main.yml
@@ -1,12 +1,16 @@
 ---
 
+- name: setup lb workload
+  include: roles/workload/tasks/lb/setup.yml
+  tags: setup_lb_workload
+
 - name: run lb workload
   include: roles/workload/tasks/lb/run.yml
   tags: run_lb_workload
 
-- name: stop lb workload
-  include: roles/workload/tasks/lb/stop.yml
-  tags: stop_lb_workload
+- name: cleanup lb workload
+  include: roles/workload/tasks/lb/cleanup.yml
+  tags: cleanup_lb_workload
 
 - name: collect lb workload
   include: roles/workload/tasks/lb/collect.yml
