--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -5,7 +5,7 @@ workload:
     apache_servers:
       replicas: 13
       namespace: default
-      policy: rr
+      policy: wrr
     httperf_clients:
       replicas: 13
       namespace: default
