--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -6,6 +6,11 @@ workload:
       replicas: 13
       namespace: default
       policy: wrr
+      feedback:
+        type: memcached
+        timeout: 1
+        metric: cpu  # cpu, loadavg
+        param: 0.5   # cpu:alpha_value, loadavg:max_load
     httperf_clients:
       replicas: 13
       namespace: default
