--- a/apps/vmware/roles/workload/tasks/lb/setup.yml
+++ b/apps/vmware/roles/workload/tasks/lb/setup.yml
@@ -4,12 +4,13 @@
   shell: kubectl get pods --selector=app=memcached -o jsonpath={.items[*].status.podIP}
   register: memcached_address
   when: '"master" in nodes[inventory_hostname]["type"] and workload.lb.apache_servers.feedback.type == "memcached"'
+  failed_when: 'memcached_address.stdout == ""'
   become: true
 
 - name: create memcached script
   set_fact:
     feedback_command: "python /root/request-lb-weight.py `hostname -i` {{ memcached_address.stdout }}:11211 {{ workload.lb.apache_servers.feedback.timeout }} False {{ workload.lb.apache_servers.feedback.metric }} {{ workload.lb.apache_servers.feedback.param }};"
-  when: '"master" in nodes[inventory_hostname]["type"] and workload.lb.apache_servers.feedback.type == "memcached"'
+  when: '"master" in nodes[inventory_hostname]["type"] and workload.lb.apache_servers.feedback.type == "memcached" and memcached_address.stdout != ""'
   become: true
 
 - name: define feedback_command if undefined
