--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -8,6 +8,7 @@ workload:
       policy: wrr
       feedback:
         type: memcached
+        namespace: default
         timeout: 1
         metric: cpu  # cpu, loadavg
         param: 0.5   # cpu:alpha_value, loadavg:max_load
@@ -21,4 +22,8 @@ workload:
       iters: 1
       timeout: 50
     ipvsadm:
-      timeout: 1
+      stats:
+        timeout: 1
+      feedback:
+        type: memcached
+        timeout: 1
