--- a/testbeds/vmware/vars/kubernetes.yml
+++ b/testbeds/vmware/vars/kubernetes.yml
@@ -9,377 +9,377 @@ nodes:
     type: "master:minion"
     master: "{{ master }}"
     remote_nodes:
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
       - prme_id: 2
         vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme1-k8s-node-121:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme1-k8s-node-122:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme1-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme1-k8s-node-122:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
   prme2-k8s-node-120:
     type: "minion"
     master: "{{ master }}"
     remote_nodes:
       - prme_id: 1
         vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme2-k8s-node-121:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme3-k8s-node-120:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme3-k8s-node-121:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme7-k8s-node-120:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme7-k8s-node-121:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme8-k8s-node-120:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme8-k8s-node-121:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 120
-#      - prme_id: 9
-#        vm_id: 121
-#  prme9-k8s-node-120:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 121
-#  prme9-k8s-node-121:
-#    type: "minion"
-#    master: "{{ master }}"
-#    remote_nodes:
-#      - prme_id: 1
-#        vm_id: 120
-#      - prme_id: 1
-#        vm_id: 121
-#      - prme_id: 1
-#        vm_id: 122
-#      - prme_id: 2
-#        vm_id: 120
-#      - prme_id: 2
-#        vm_id: 121
-#      - prme_id: 3
-#        vm_id: 120
-#      - prme_id: 3
-#        vm_id: 121
-#      - prme_id: 7
-#        vm_id: 120
-#      - prme_id: 7
-#        vm_id: 121
-#      - prme_id: 8
-#        vm_id: 120
-#      - prme_id: 8
-#        vm_id: 121
-#      - prme_id: 9
-#        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme2-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme3-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme3-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme7-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme7-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme8-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme8-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 120
+      - prme_id: 9
+        vm_id: 121
+  prme9-k8s-node-120:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 121
+  prme9-k8s-node-121:
+    type: "minion"
+    master: "{{ master }}"
+    remote_nodes:
+      - prme_id: 1
+        vm_id: 120
+      - prme_id: 1
+        vm_id: 121
+      - prme_id: 1
+        vm_id: 122
+      - prme_id: 2
+        vm_id: 120
+      - prme_id: 2
+        vm_id: 121
+      - prme_id: 3
+        vm_id: 120
+      - prme_id: 3
+        vm_id: 121
+      - prme_id: 7
+        vm_id: 120
+      - prme_id: 7
+        vm_id: 121
+      - prme_id: 8
+        vm_id: 120
+      - prme_id: 8
+        vm_id: 121
+      - prme_id: 9
+        vm_id: 120
 
 apps:
 #  - name: kubernetes-dashboard
 #    namespace: kube-system
 #    policy: rr
-#  - name: hello-world
-#    namespace: default
-#    policy: rr
+  - name: hello-world
+    namespace: default
+    policy: rr
 #  - name: httperf-clients
 #    namespace: default
 #    policy: rr
-  - name: apache-servers
-    namespace: default
-    policy: wrr
+#  - name: apache-servers
+#    namespace: default
+#    policy: wrr
