--- a/apps/vmware/vars/workload.yml
+++ b/apps/vmware/vars/workload.yml
@@ -5,7 +5,7 @@ workload:
     apache_servers:
       replicas: 13
       namespace: default
-      policy: wrr
+      policy: wlc
       feedback:
         type: memcached
         namespace: default
@@ -15,9 +15,10 @@ workload:
     httperf_clients:
       replicas: 13
       namespace: default
-      num_conns: 100
+      uri: cgi-bin/cpu.py?loop_count=100  # index.html, cgi-bin/cpu.py?loop_count=10
+      num_conns: 1440
       num_calls: 1
-      rate: 10
+      rate: 8
       ramp: 10
       iters: 1
       timeout: 50
