--- a/testbeds/vmware/roles/proxmox/tasks/hacks/br0_as_gateway_bridge/cleanup.yml
+++ b/testbeds/vmware/roles/proxmox/tasks/hacks/br0_as_gateway_bridge/cleanup.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: bring up vmbr0
+  shell: ip link set dev vmbr0 up
+
 - name: remove tap interfaces from br0
   shell: ovs-vsctl del-port br0 tap{{ item }}i0
   with_items: "{{ nodes[inventory_hostname]['vm_ids'] }}"
